--- a/src/VN-master-detail/VN-master-detail/AppShell.xaml
+++ b/src/VN-master-detail/VN-master-detail/AppShell.xaml
@@ -5,11 +5,12 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
     xmlns:local="clr-namespace:VN_master_detail"
     Shell.FlyoutBehavior="Disabled"
+    Shell.NavBarIsVisible="False"
     Title="VN_master_detail">
 
     <ShellContent
         Title="Home"
-        ContentTemplate="{DataTemplate local:MainPage}"
-        Route="MainPage" />
+        ContentTemplate="{DataTemplate local:AcceuilPage}"
+        Route="AcceuilPage"/>
 
 </Shell>
