--- a/src/VN-master-detail/VN-master-detail/AcceuilPage.xaml
+++ b/src/VN-master-detail/VN-master-detail/AcceuilPage.xaml
@@ -18,7 +18,7 @@
         <ScrollView
             Grid.Column="1">
             <components:NovelList
-                Novels="{Binding}"/>
+                Novels="{Binding List}"/>
         </ScrollView>
     </Grid>
 
