--- a/src/VN-master-detail/VN-master-detail/Components/NovelList.xaml
+++ b/src/VN-master-detail/VN-master-detail/Components/NovelList.xaml
@@ -6,7 +6,7 @@
     <ScrollView
         BindingContext="{x:Reference root}">
         <FlexLayout 
-            BindableLayout.ItemsSource="{Binding Novels}"
+            BindableLayout.ItemsSource="{Binding Novels.List}"
             Direction="Row"
             Wrap="Wrap">
             <BindableLayout.ItemTemplate>
@@ -18,16 +18,15 @@
                         Margin="5"
                         Padding="10">
                         <ImageButton
-                            Source="{Binding Image.url}"
-                            Clicked="GameImageClicked"
-                            MaximumWidthRequest="{Binding Image.dims[0]}"
-                            MaximumHeightRequest="{Binding Image.dims[1]}"/>
+                            Source="{Binding Image.Url}"
+                            MaximumWidthRequest="{Binding Image.Dims[0]}"
+                            MaximumHeightRequest="{Binding Image.Dims[1]}"/>
                         <Label 
                             Text="{Binding Title}"
                             HorizontalOptions="Center"/>
                         <Label Text="{Binding Description}"
                             HorizontalOptions="Center"/>
-                        <Label Text="{Binding average}"
+                        <Label Text="{Binding Average}"
                             HorizontalOptions="Center"/>
                     </StackLayout>
                 </DataTemplate>
