[FIX] List of novels not showing

--- a/src/VN-master-detail/VN-master-detail/AppShell.xaml
+++ b/src/VN-master-detail/VN-master-detail/AppShell.xaml
@@ -9,8 +9,13 @@
     Title="VN_master_detail">
 
     <ShellContent
-        Title="Home"
+        Title="home"
         ContentTemplate="{DataTemplate local:AcceuilPage}"
-        Route="AcceuilPage"/>
+        Route="Home"/>
+
+    <ShellContent
+        Title="search"
+        ContentTemplate="{DataTemplate local:Search}"
+        Route="Search"/>
 
 </Shell>
