--- a/src/VN-master-detail/VN-master-detail/Components/NovelList.xaml
+++ b/src/VN-master-detail/VN-master-detail/Components/NovelList.xaml
@@ -6,7 +6,7 @@
     <ScrollView
         BindingContext="{x:Reference root}">
         <FlexLayout 
-            BindableLayout.ItemsSource="{Binding Novels.List}"
+            BindableLayout.ItemsSource="{Binding Novels}"
             Direction="Row"
             Wrap="Wrap">
             <BindableLayout.ItemTemplate>
