--- a/src/VN-master-detail/VN-master-detail/AcceuilPage.xaml
+++ b/src/VN-master-detail/VN-master-detail/AcceuilPage.xaml
@@ -2,8 +2,17 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:components="clr-namespace:VN_master_detail.Components"
+             xmlns:toolkit="http://schemas.microsoft.com/dotnet/2022/maui/toolkit"
              x:Class="VN_master_detail.AcceuilPage"
-             x:Name="root">
+             Title="Home"
+             x:Name="root"
+             BindingContext="{x:Reference root}">
+    
+    <ContentPage.Behaviors>
+        <toolkit:EventToCommandBehavior
+            Command="{Binding Novels.GetNovels}"
+            EventName="Appearing"/>
+    </ContentPage.Behaviors>
 
     <Grid
         Margin="5">
@@ -17,11 +26,9 @@
         <components:SideBar
             AcceuilBtnColor="DarkCyan"/>
         <ScrollView
-            Grid.Column="1"
-            BindingContext="{x:Reference root}">
+            Grid.Column="1">
             <components:NovelList
-                Novels="{Binding Novels.List}"
-                Test="HATSUNE MIKU !!!!!"/>
+                Novels="{Binding Novels.List}"/>
         </ScrollView>
     </Grid>
 
