[ADD] Everything needed for Login

--- a/src/VN-master-detail/VN-master-detail/AppShell.xaml
+++ b/src/VN-master-detail/VN-master-detail/AppShell.xaml
@@ -18,4 +18,9 @@
         ContentTemplate="{DataTemplate local:Search}"
         Route="Search"/>
 
+    <ShellContent
+        Title="login"
+        ContentTemplate="{DataTemplate local:Login}"
+        Route="Login"/>
+
 </Shell>
