--- a/src/VN-master-detail/VN-master-detail/AppShell.xaml
+++ b/src/VN-master-detail/VN-master-detail/AppShell.xaml
@@ -23,4 +23,9 @@
         ContentTemplate="{DataTemplate local:Login}"
         Route="Login"/>
 
+    <ShellContent
+        Title="profile"
+        ContentTemplate="{DataTemplate local:Profile}"
+        Route="Profile"/>
+
 </Shell>
