--- a/src/VN-master-detail/VN-master-detail/Components/NovelList.xaml
+++ b/src/VN-master-detail/VN-master-detail/Components/NovelList.xaml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <ContentView xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             xmlns:local="clr-namespace:VN_master_detail.Components"
              x:Class="VN_master_detail.Components.NovelList"
              x:Name="root">
     <ScrollView
@@ -17,6 +18,11 @@
                         BackgroundColor="LightGray"
                         Margin="5"
                         Padding="10">
+                        <StackLayout.GestureRecognizers>
+                            <TapGestureRecognizer
+                                Command="{Binding NavigationVM.GoToDetail, Source={RelativeSource AncestorType={x:Type local:NovelList}}}"
+                                CommandParameter="{Binding Id}"/>
+                        </StackLayout.GestureRecognizers>
                         <ImageButton
                             Source="{Binding Image.Url}"
                             MaximumWidthRequest="{Binding Image.Dims[0]}"
