[ADD] Home shows currently connected user's list

--- a/src/VN-master-detail/VN-master-detail/AcceuilPage.xaml
+++ b/src/VN-master-detail/VN-master-detail/AcceuilPage.xaml
@@ -10,7 +10,7 @@
     
     <ContentPage.Behaviors>
         <toolkit:EventToCommandBehavior
-            Command="{Binding Novels.GetNovels}"
+            Command="{Binding Novels.GetUserNovels}"
             EventName="Appearing"/>
     </ContentPage.Behaviors>
 
