--- a/src/VN-master-detail/VN-master-detail/NovelDetail.xaml
+++ b/src/VN-master-detail/VN-master-detail/NovelDetail.xaml
@@ -75,6 +75,12 @@
                            StringFormat='Playable in : {0}',
                            Converter={StaticResource StringArrConverter}}"
                        Margin="0,10,0,10"/>
+                <VerticalStackLayout
+                    IsVisible="{Binding IsUserConnected}">
+                    <Button
+                        BackgroundColor="Green"
+                        Text="Add"/>
+                </VerticalStackLayout>
             </StackLayout>
         </ScrollView>
     </Grid>
