--- a/src/VN-master-detail/VN-master-detail/NovelDetail.xaml
+++ b/src/VN-master-detail/VN-master-detail/NovelDetail.xaml
@@ -80,32 +80,61 @@
                     IsVisible="{Binding IsUserConnected}">
                     <VerticalStackLayout
                         IsVisible="{Binding IsInUserList}">
-                        <VerticalStackLayout.GestureRecognizers>
-                            <TapGestureRecognizer
-                                Command="{Binding ReverseEntry}"/>
-                        </VerticalStackLayout.GestureRecognizers>
-                        <Label
-                            FontSize="22"
-                            Margin="5"
-                            IsVisible="{Binding IsEntry,
-                                Converter={x:StaticResource InversedBool}}"
-                            Text="{Binding UserGrade,
-                                StringFormat='Your grade: {0}'}"/>
-                        <HorizontalStackLayout
-                            IsVisible="{Binding IsEntry}">
-                            <Entry
-                                Text="{Binding UserGrade}"
-                                Margin="5"/>
-                            <Button
-                                Text="Accept"
-                                Margin="5"
-                                Command="{Binding SetNovelGrade}"/>
+                        <HorizontalStackLayout>
+                            <HorizontalStackLayout.GestureRecognizers>
+                                <TapGestureRecognizer
+                                    Command="{Binding ReverseEntry}"/>
+                            </HorizontalStackLayout.GestureRecognizers>
+                            <Label
+                                FontSize="18"
+                                Margin="0,5,5,5"
+                                IsVisible="{Binding IsEntry,
+                                    Converter={x:StaticResource InversedBool}}"
+                                Text="{Binding UserGrade,
+                                    StringFormat='Your vote: {0}'}"/>
+                            <HorizontalStackLayout
+                                IsVisible="{Binding IsEntry}"
+                                VerticalOptions="Center">
+                                <Label
+                                    Text="Your vote: "
+                                    VerticalOptions="Center"
+                                    FontSize="18"
+                                    Margin="0,0,3,0"/>
+                                <Entry
+                                    Text="{Binding UserGrade}"
+                                    Margin="5"/>
+                            </HorizontalStackLayout>
                         </HorizontalStackLayout>
+                        <HorizontalStackLayout>
+                            <HorizontalStackLayout.GestureRecognizers>
+                                <TapGestureRecognizer
+                                    Command="{Binding ReverseEntry}"/>
+                            </HorizontalStackLayout.GestureRecognizers>
+                            <Label
+                                Text="Label: "
+                                VerticalOptions="Center"/>
+                            <Label
+                                Text="{Binding SelectedLabel.Name}"
+                                VerticalOptions="Center"
+                                IsVisible="{Binding IsEntry,
+                                    Converter={x:StaticResource InversedBool}}"
+                                Margin="0,5,5,5"/>
+                            <Picker
+                                ItemsSource="{Binding Labels}"
+                                ItemDisplayBinding="{Binding Name}"
+                                SelectedIndex="{Binding SelectedLabelId}"
+                                SelectedItem="{Binding SelectedLabel}"
+                                IsVisible="{Binding IsEntry}"/>
+                        </HorizontalStackLayout>
+                        <Button
+                            Text="Save Changes"
+                            Margin="0,10,5,10"
+                            Command="{Binding SetNovelGrade}"/>
                         <Button
                             BackgroundColor="Red"
                             Text="Delete from user list"
                             Command="{Binding DeleteNovelFromUser}"
-                            Margin="5"/>
+                            Margin="0,10,5,10"/>
                     </VerticalStackLayout>
                     <Button
                         Margin="5"
