--- a/src/VN-master-detail/VN-master-detail/Resources/Themes/LightTheme.xaml
+++ b/src/VN-master-detail/VN-master-detail/Resources/Themes/LightTheme.xaml
@@ -3,4 +3,11 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="VN_master_detail.Resources.Themes.LightTheme">
 
+    <Color x:Key="PrimaryBackgroundColor">#FFFFFF</Color>
+    <Color x:Key="SecondaryBackgroundColor">#A0A0A0</Color>
+    
+    <Color x:Key="PrimaryTextColor">#000000</Color>
+    <Color x:Key="PrimaryBtnTextColor">#000000</Color>
+   
+    
 </ResourceDictionary>
