--- a/src/VN-master-detail/VN-master-detail/Resources/Themes/DarkTheme.xaml
+++ b/src/VN-master-detail/VN-master-detail/Resources/Themes/DarkTheme.xaml
@@ -3,4 +3,10 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="VN_master_detail.Resources.Themes.DarkTheme">
 
+    <Color x:Key="PrimaryBackgroundColor">#707070</Color>
+    <Color x:Key="SecondaryBackgroundColor">#A0A0A0</Color>
+
+    <Color x:Key="PrimaryTextColor">#FFFFFF</Color>
+    <Color x:Key="PrimaryBtnTextColor">#E0E0E0</Color>
+
 </ResourceDictionary>
