[ADD] Themes to SideBar NovelList and LoginPage

--- a/src/VN-master-detail/VN-master-detail/Components/SideBar.xaml
+++ b/src/VN-master-detail/VN-master-detail/Components/SideBar.xaml
@@ -17,13 +17,18 @@
             JustifyContent="SpaceEvenly">
             <Button
                 Text="Recherche"
+                TextColor="{DynamicResource PrimaryTextColor}"
+                BackgroundColor="{DynamicResource SecondaryBackgroundColor}"
                 Command="{Binding NavigationVM.GoToSearch}"/>
             <Button
                 Text="Acceuil"
+                TextColor="{DynamicResource PrimaryTextColor}"
+                BackgroundColor="{DynamicResource SecondaryBackgroundColor}"
                 Command="{Binding NavigationVM.GoToHome}"/>
         </FlexLayout>
         <ImageButton
             Grid.Row="1"
+            BackgroundColor="{DynamicResource PrimaryBackgroundColor}"
             Source="dotnet_bot.png"
             Command="{Binding NavigationVM.GoToLogin}"/>
     </Grid>
