--- a/src/VN-master-detail/VN-master-detail/Components/NovelList.xaml
+++ b/src/VN-master-detail/VN-master-detail/Components/NovelList.xaml
@@ -15,7 +15,7 @@
                     <StackLayout
                         MinimumHeightRequest="250"
                         MinimumWidthRequest="200"
-                        BackgroundColor="LightGray"
+                        BackgroundColor="{DynamicResource SecondaryBackgroundColor}"
                         Margin="5"
                         Padding="10">
                         <StackLayout.GestureRecognizers>
@@ -23,16 +23,22 @@
                                 Command="{Binding NavigationVM.GoToDetail, Source={RelativeSource AncestorType={x:Type local:NovelList}}}"
                                 CommandParameter="{Binding Id}"/>
                         </StackLayout.GestureRecognizers>
-                        <ImageButton
+                        <Image
+                            BackgroundColor="{DynamicResource SecondaryBackgroundColor}"
                             Source="{Binding Image.ThumbnailUrl}"
                             MaximumWidthRequest="{Binding Image.ThumbnailDims[0]}"
                             MaximumHeightRequest="{Binding Image.ThumbnailDims[1]}"/>
                         <Label 
+                            TextColor="{DynamicResource PrimaryTextColor}"
                             Text="{Binding Title}"
                             HorizontalOptions="Center"/>
-                        <Label Text="{Binding Description}"
+                        <Label 
+                            TextColor="{DynamicResource PrimaryTextColor}"
+                            Text="{Binding Description}"
                             HorizontalOptions="Center"/>
-                        <Label Text="{Binding Average}"
+                        <Label 
+                            TextColor="{DynamicResource PrimaryTextColor}"
+                            Text="{Binding Average}"
                             HorizontalOptions="Center"/>
                     </StackLayout>
                 </DataTemplate>
