--- a/src/VN-master-detail/VN-master-detail/Profile.xaml
+++ b/src/VN-master-detail/VN-master-detail/Profile.xaml
@@ -54,13 +54,30 @@
                 Text="{Binding Settings, Source={StaticResource appResources}}"/>
             <Picker
                 TextColor="{DynamicResource PrimaryTextColor}"
-                BackgroundColor="{DynamicResource SecondatyBackgroundColor}"
+                BackgroundColor="{DynamicResource SecondaryBackgroundColor}"
                 Margin="10"
                 ItemsSource="{Binding Themes}"
                 SelectedItem="{Binding CurrentTheme}">
                 <Picker.Behaviors>
                     <toolkit:EventToCommandBehavior
                         Command="{Binding ChangeTheme}"
+                        EventName="SelectedIndexChanged"/>
+                </Picker.Behaviors>
+            </Picker>
+            <Picker
+                TextColor="{DynamicResource PrimaryTextColor}"
+                BackgroundColor="{DynamicResource SecondaryBackgroundColor}"
+                SelectedItem="{Binding CurrentCulture, Source={StaticResource appResources}}"
+                Margin="10">
+                <Picker.ItemsSource>
+                    <x:Array Type="{x:Type x:String}">
+                        <x:String>fr-FR</x:String>
+                        <x:String>en</x:String>
+                    </x:Array>
+                </Picker.ItemsSource>
+                <Picker.Behaviors>
+                    <toolkit:EventToCommandBehavior
+                        Command="{Binding ChangeCulture, Source={StaticResource appResources}}"
                         EventName="SelectedIndexChanged"/>
                 </Picker.Behaviors>
             </Picker>
